Closed Bug 313174 Opened 20 years ago Closed 20 years ago

IME composition string isn't rendered as selection text

Categories

(Core :: Layout: Text and Fonts, defect)

x86
BeOS
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod, intl, regression)

Attachments

(1 file)

Bug-org 242315 is fixed. But it may have a regression. On Be-OS, we don't render the composition string as selection text. This is serious regression.
fix is simple, adding || defined(XP_BEOS), as BeOS supports InvertRect
Attached patch Patch rv1.0Splinter Review
Maybe, fix.
Attachment #200247 - Flags: superreview?(roc)
Attachment #200247 - Flags: review?(roc)
i can review patch from BeOS side - as it worked for me and Koki-san at selection. But does it need sr ?
Comment on attachment 200247 [details] [diff] [review] Patch rv1.0 > But does it need sr ? Yes.
Attachment #200247 - Flags: review?(roc) → review?(sergei_d)
How it looks in BeOS with patch applied: http://beos.spb.ru/mozilla/BeIMEInvertRect.png
Comment on attachment 200247 [details] [diff] [review] Patch rv1.0 r=sergei_d
Attachment #200247 - Flags: review?(sergei_d) → review+
sorry, forget to set Haru font for screenshot - problem with Harus is that it produces wrong spacing (double) for cyrillic letters (my default locale is Russian) in BeOS. But result is understandable anyway
I can see the selection rendering. It's enough. Thanks.
Boris: Could you superreview to this? This patch is very simple and this is blocker bug for BeOS user. # I tried to contact to roc, but I don't have his reply...
Comment on attachment 200247 [details] [diff] [review] Patch rv1.0 sr=bzbarsky, though I have some questions: 1) If it's a blocker, why wasn't blocking? requested? The chance of getting this into 1.8 is about 0 at this point. 2) Why do we need this whitelist of XP* stuff? Why not just USE_INVERT_RECT on anything that's not Mac?
Attachment #200247 - Flags: superreview?(roc) → superreview+
> 1 Bug 242315 is not going to 1.8 branch. > 2 Mac is changed by bug 236996. # And I will rewrite these code in 1.9 cycle.
checked-in to Trunk. Sergei: If you need approval for this, you should request it.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Niels has his own plans about 1.8* - he decided to skip RC1 as far as i know. Usually it is his job/privilege to set approval requests for 1.8(FF 1.5).
Just so people are clear, RC1 is a real RC. That's the code we'll ship unless something comes up that's stop-ship.
It's clear, however, I sort of hope that (In reply to comment #16) > Just so people are clear, RC1 is a real RC. That's the code we'll ship unless > something comes up that's stop-ship. I'm sort of hoping that that would be the case. Anyway, else I'll just release a build with custom patches, so it's not a major problem.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: