Bug 313174 IME composition string isn't rendered as selection text r=sergei_d, sr=bzbarsky